--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
         "react/react": "^0.4.2",
         "nikic/fast-route": "^1.0",
         "pimple/pimple": "^3.0",
-        "twig/twig": "^1.24"
+        "twig/twig": "^1.24",
+        "dflydev/apache-mime-types": "^1.0"
     },
     "autoload": {
         "psr-4": {
