--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,16 @@
 {
+    "repositories": [
+        {
+            "url": "https://github.com/hassansin/expressphp.git",
+            "type": "git"
+        }
+    ],
+    
     "require": {
-        "psr/http-message": "^1.0",
-        "react/react": "^0.4.2",
-        "nikic/fast-route": "^1.0",
-        "pimple/pimple": "^3.0",
-        "twig/twig": "^1.24",
-        "dflydev/apache-mime-types": "^1.0"
+        "hassansin/expressphp": "dev-master"
     },
     "autoload": {
         "psr-4": {
-            "ExpressPHP\\": "express-php",
             "App\\": "server\\app"
         }
     }
